feat: Enable SIMD

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -34,6 +34,8 @@ jobs:
       matrix:
        BUILD_CONFIGURATION: [Release]
        MONO_WASM_THREADS: ['true', '']
+       MONO_WASM_SIMD: ['true', '']
+       
 
     steps:
     - name: Setup .NET SDK
@@ -52,6 +54,7 @@ jobs:
         echo "CurrentCommit=$CURRENT_COMMIT"
         echo "BUILD_CONFIGURATION=${{ matrix.BUILD_CONFIGURATION }}" >> $env:GITHUB_ENV
         echo "MONO_WASM_THREADS=${{ matrix.MONO_WASM_THREADS }}" >> $env:GITHUB_ENV
+        echo "MONO_WASM_SIMD=${{ matrix.MONO_WASM_SIMD }}" >> $env:GITHUB_ENV
 
     - name: Clone mono/linker
       run: |
@@ -98,7 +101,7 @@ jobs:
         $env:EMSDK_PATH="$env:GITHUB_WORKSPACE\emsdk"
         $env:MonoEnableAssertMessages=true # enable emsdk assert messages
         cd runtime
-        .\build.cmd -arch wasm -os Browser -subset mono+libs /p:RuntimeFlavor=Mono -c $env:BUILD_CONFIGURATION $env:ADDITIONAL_BUILD_ARGS "/p:WasmEnableThreads=$env:MONO_WASM_THREADS" /p:CrossBuild=false /bl:ci-artifacts\msbuild.binlog
+        .\build.cmd -arch wasm -os Browser -subset mono+libs /p:RuntimeFlavor=Mono -c $env:BUILD_CONFIGURATION $env:ADDITIONAL_BUILD_ARGS "/p:WasmEnableThreads=$env:MONO_WASM_THREADS" "/p:WasmEnableSIMD=$MONO_WASM_SIMD" /p:CrossBuild=false /bl:ci-artifacts\msbuild.binlog
         
         # Move cross compiler to appropriate location 
         move .\artifacts\bin\mono\Browser.wasm.Release\cross .\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\runtimes\browser-wasm\native
@@ -135,6 +138,10 @@ jobs:
             $archiveConfiguration="-threads";
         }
 
+        if('${{ matrix.MONO_WASM_SIMD }}' -ne '') {
+            $archiveConfiguration="-simd";
+        }
+
         Invoke-Expression "Get-Location | select -ExpandProperty Path" | Out-String -NoNewLine -OutVariable Current_Path
         $ARTIFACTS_FOLDER="$Current_Path\ci-artifacts"
         mkdir -p $ARTIFACTS_FOLDER
@@ -159,6 +166,7 @@ jobs:
       matrix:
        BUILD_CONFIGURATION: [Release]
        MONO_WASM_THREADS: ['true', '']
+       MONO_WASM_SIMD: ['true', '']
 
     steps:
     - name: Setup .NET SDK
@@ -201,6 +209,7 @@ jobs:
         echo "CurrentCommit=$CURRENT_COMMIT"
         echo "BUILD_CONFIGURATION=${{ matrix.BUILD_CONFIGURATION }}" >> $GITHUB_ENV
         echo "MONO_WASM_THREADS=${{ matrix.MONO_WASM_THREADS }}" >> $GITHUB_ENV
+        echo "MONO_WASM_SIMD=${{ matrix.MONO_WASM_SIMD }}" >> $GITHUB_ENV
 
     - name: Clone mono/linker
       run: |
@@ -244,7 +253,7 @@ jobs:
         set -e
         export EMSDK_PATH=$HOME/emsdk
         cd runtime
-        ./build.sh -arch wasm -os Browser -c $BUILD_CONFIGURATION $ADDITIONAL_BUILD_ARGS "/p:WasmEnableThreads=$MONO_WASM_THREADS"
+        ./build.sh -arch wasm -os Browser -c $BUILD_CONFIGURATION $ADDITIONAL_BUILD_ARGS "/p:WasmEnableThreads=$MONO_WASM_THREADS" "/p:WasmEnableSIMD=$MONO_WASM_SIMD"
 
         # Mark AOT generation binaries executable
         chmod +x ./artifacts/bin/mono/Browser.wasm.Release/cross/*
@@ -277,6 +286,9 @@ jobs:
       run: |
         if [ '${{ matrix.MONO_WASM_THREADS }}' != '' ]; then
             ARCHIVE_CONFIGURATION="-threads";
+        fi
+        if [ '${{ matrix.MONO_WASM_SIMD }}' != '' ]; then
+            ARCHIVE_CONFIGURATION="-simd";
         fi
 
         ARTIFACTS_FOLDER=`pwd`/ci-artifacts
