--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -288,7 +288,7 @@ jobs:
             ARCHIVE_CONFIGURATION="-threads";
         fi
         if [ '${{ matrix.MONO_WASM_SIMD }}' != '' ]; then
-            ARCHIVE_CONFIGURATION="$(ARCHIVE_CONFIGURATION)-simd";
+            ARCHIVE_CONFIGURATION="$ARCHIVE_CONFIGURATION-simd";
         fi
 
         ARTIFACTS_FOLDER=`pwd`/ci-artifacts
