ci: Bump .NET environment to 8.0.100-preview.3.23178.7

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -15,7 +15,7 @@ on:
 env:
   EMSDK_VERSION: 3.1.34 # align with https://github.com/dotnet/runtime/blob/4ae9b33cc5bd291abd18d5b4353adf780f6810bc/src/mono/wasm/emscripten-version.txt
   DOTNETRUNTIME_COMMIT: 8adbca4855b6a12a057c6176d1e909c66cb1f01d
-  DOTNETSDK_VERSION: 6.0.200
+  DOTNETSDK_VERSION: 8.0.100-preview.3.23178.7
 
   # Original location: https://github.com/dotnet/runtime/blob/942430c5253fe58c11e32fda265bf816a13cb2b4/eng/Version.Details.xml#L235
   LINKER_COMMIT: da3c743a606b300c245c312c8cd9b3238d110d65
