--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -161,11 +161,19 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y python3-pip locales p7zip-full zip
         sudo apt-get install -y unzip zip python python3.7 msbuild libc6 ninja-build
-        sudo apt-get install -y cmake llvm-11 clang-11 autoconf automake \
+        sudo apt-get install -y cmake autoconf automake \
           libtool build-essential curl git lldb-6.0 liblldb-6.0-dev \
           libunwind8 libunwind8-dev gettext libicu-dev liblttng-ust-dev \
           libssl-dev libnuma-dev libkrb5-dev zlib1g-dev locales
         sudo locale-gen en_US.UTF-8
+
+    - name: Install LLVM 12
+      run: |
+        set -e
+        printf "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-12 main" |sudo tee /etc/apt/sources.list.d/llvm-toolchain-xenial-12.list
+        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key |sudo apt-key add -
+        sudo apt update
+        sudo apt install llvm-12 cland-12
         
     - name: Update to Git 2.18 or later
       run: |
