ci: Adjust llvm install

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -173,7 +173,7 @@ jobs:
         printf "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-12 main" |sudo tee /etc/apt/sources.list.d/llvm-toolchain-xenial-12.list
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key |sudo apt-key add -
         sudo apt update
-        sudo apt install llvm-12 clang-12
+        sudo apt install -y llvm-12 clang-12
         
     - name: Update to Git 2.18 or later
       run: |
