--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -139,7 +139,7 @@ jobs:
   build_linux_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    container: 'unoplatform/wasm-build:2.3'
+    # container: 'unoplatform/wasm-build:2.3'
 
     strategy:
       matrix:
