--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -161,7 +161,7 @@ jobs:
       run: |
         set -e
         apt-get update
-        sudo apt-get install -y sudo
+        apt-get install -y sudo
         sudo apt-get install -y python3-pip locales p7zip-full zip
         sudo apt-get install -y unzip zip python3.9 msbuild libc6 ninja-build
         sudo apt-get install -y cmake autoconf automake \
