--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -163,7 +163,7 @@ jobs:
         apt-get update
         apt-get install -y sudo
         sudo apt-get install -y python3-pip locales p7zip-full zip
-        sudo apt-get install -y unzip zip python3.9 msbuild libc6 ninja-build
+        sudo apt-get install -y unzip zip msbuild libc6 ninja-build
         sudo apt-get install -y cmake autoconf automake \
           libtool build-essential curl git lldb-6.0 liblldb-6.0-dev \
           libunwind8 libunwind8-dev gettext libicu-dev liblttng-ust-dev \
