--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -163,9 +163,9 @@ jobs:
         apt-get update
         apt-get install -y sudo
         sudo apt-get install -y python3-pip locales p7zip-full zip
-        sudo apt-get install -y unzip zip msbuild libc6 ninja-build
+        sudo apt-get install -y unzip zip libc6 ninja-build
         sudo apt-get install -y cmake autoconf automake \
-          libtool build-essential curl git lldb-6.0 liblldb-6.0-dev \
+          libtool build-essential curl git \
           libunwind8 libunwind8-dev gettext libicu-dev liblttng-ust-dev \
           libssl-dev libnuma-dev libkrb5-dev zlib1g-dev locales
         sudo locale-gen en_US.UTF-8
