chore: Adjust remove

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -225,9 +225,9 @@ jobs:
         cd ./runtime/artifacts/packages/Release/Shipping
         rm *.symbols.nupkg
         rm *.Templates.*.nupkg
-        rm *.ToolChain.net6.Manifest.*.nupkg
-        rm *.ToolChain.net7.Manifest.*.nupkg
-        rm *.ToolChain.net8.Manifest.*.nupkg
+        rm *ToolChain.net6.Manifest*.nupkg
+        rm *ToolChain.net7.Manifest*.nupkg
+        rm *ToolChain.net8.Manifest*.nupkg
         unzip -o `*.nupkg` -d uno
 
     - name: Zip Archive
