--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -62,57 +62,34 @@ jobs:
       name: Apply uno-specific patches
       shell: pwsh
 
-    - name: 'Setup Emscripten'
-      run: |
-        git clone --branch $env:EMSDK_VERSION https://github.com/emscripten-core/emsdk
-        cd emsdk
-        .\emsdk install $env:EMSDK_VERSION
-        .\emsdk activate $env:EMSDK_VERSION
-
     - name: 'Setup Ninja'
       run: |
         choco install ninja
 
-    - name: Build ILLinker
-      run: |
-        cd runtime/src/tools/illink/src/linker
-        dotnet build -c Release
-
     - name: Build Wasm Runtime
       run: |
-        $env:EMSDK_PATH="$env:GITHUB_WORKSPACE\emsdk"
         $env:MonoEnableAssertMessages=true # enable emsdk assert messages
         cd runtime
-        .\build.cmd -arch wasm -os browser -subset mono+libs /p:RuntimeFlavor=Mono -c $env:BUILD_CONFIGURATION $env:ADDITIONAL_BUILD_ARGS /p:TestAssemblies=false "/p:MonoWasmBuildVariant=$env:MONO_WASM_THREADS" "/p:WasmEnableSIMD=$MONO_WASM_SIMD" /p:CrossBuild=false /bl:ci-artifacts\msbuild.binlog
-        
-        # Move cross compiler to appropriate location 
-        move .\artifacts\bin\mono\Browser.wasm.Release\cross .\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\runtimes\browser-wasm\native
+        .\build.cmd -arch wasm -os browser -subset mono+libs /p:RuntimeFlavor=Mono -c $env:BUILD_CONFIGURATION $env:ADDITIONAL_BUILD_ARGS /p:TestAssemblies=false "/p:MonoWasmBuildVariant=$env:MONO_WASM_THREADS" /p:CrossBuild=false /bl:ci-artifacts\msbuild.binlog
 
-        # Move src and include files to locations compatible with mono's packager
-        cd .\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\runtimes\browser-wasm\native
-        move include\wasm\* .
-        move src\* . -Force
-        move System.Private.CoreLib.* ..\lib\net8.0
-
-    - name: Copy Wasm Debugger files
+    - name: Create artifact structure
       run: |
-        $DEBUGGER_OUT="runtime\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\dbg-proxy"
-        mkdir -p $DEBUGGER_OUT\net7.0
-        cp -r runtime\artifacts\bin\BrowserDebugHost\wasm\$env:BUILD_CONFIGURATION\net7.0\* $DEBUGGER_OUT\net7.0
-        mkdir -p $DEBUGGER_OUT\net8.0
-        cp -r runtime\artifacts\bin\BrowserDebugHost\wasm\$env:BUILD_CONFIGURATION\* $DEBUGGER_OUT\net8.0
-        Remove-Item "$DEBUGGER_OUT\net8.0\net7.0" -Recurse # remove additional required for standard net7.0 packaging
-
-    - name: Copy mono/linker files
-      run: |
-        $LINKER_OUT="runtime\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\tools"
-        mkdir -p $LINKER_OUT
-        cp -r runtime\artifacts\bin\Mono.Linker\$env:BUILD_CONFIGURATION\net7.0\* $LINKER_OUT
-
+        cd ./runtime/artifacts/packages/Release/Shipping
+        rm *.symbols.nupkg
+        rm *.Templates.*.nupkg
+        rm *ToolChain.net6.Manifest*.nupkg
+        rm *ToolChain.net7.Manifest*.nupkg
+        rm *ToolChain.net8.Manifest*.nupkg
+        unzip -o '*.nupkg' -d uno
+        cd uno
+        rm *.nuspec
+        rm -f _rels
+        rm -f data
+  
     - name: Copy ninja
       run: |
-        Invoke-WebRequest https://github.com/ninja-build/ninja/releases/download/v1.12.0/ninja-win.zip -OutFile ninja-win.zip 
-        Expand-Archive -LiteralPath 'ninja-win.zip' -DestinationPath runtime\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION\tools
+        Invoke-WebRequest https://github.com/ninja-build/ninja/releases/download/v1.10.2/ninja-win.zip -OutFile ninja-win.zip 
+        Expand-Archive -LiteralPath 'ninja-win.zip' -DestinationPath \runtime\artifacts\packages\Release\Shipping\uno\tools\ninja
 
     - name: Zip Archive
       run: |
@@ -127,7 +104,7 @@ jobs:
         Invoke-Expression "Get-Location | select -ExpandProperty Path" | Out-String -NoNewLine -OutVariable Current_Path
         $ARTIFACTS_FOLDER="$Current_Path\ci-artifacts"
         mkdir -p $ARTIFACTS_FOLDER
-        cd runtime\artifacts\bin\microsoft.netcore.app.runtime.browser-wasm\$env:BUILD_CONFIGURATION
+        cd .\runtime\artifacts\packages\Release\Shipping\uno
         Compress-Archive -DestinationPath $ARTIFACTS_FOLDER\dotnet-runtime-wasm-windows-$env:CURRENT_COMMIT-$env:BASE_DOTNET_SHORT_COMMIT-${{ github.run_id }}-$env:BUILD_CONFIGURATION$archiveConfiguration.zip -Path *
 
     - uses: actions/upload-artifact@v2
@@ -229,6 +206,10 @@ jobs:
         rm *ToolChain.net7.Manifest*.nupkg
         rm *ToolChain.net8.Manifest*.nupkg
         unzip -o '*.nupkg' -d uno
+        cd uno
+        rm *.nuspec
+        rm -f _rels
+        rm -f data
 
     - name: Zip Archive
       run: |
