--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -90,6 +90,11 @@ jobs:
         Remove-Item *.nuspec
         Remove-Item _rels -Recurse
         Remove-Item data -Recurse
+        Remove-Item package -Recurse
+
+        # Move cross compiler to appropriate location 
+        move .\artifacts\bin\mono\Browser.wasm.Release\cross runtimes\browser-wasm\native
+
   
     - name: Copy ninja
       run: |
@@ -215,6 +220,13 @@ jobs:
         rm *.nuspec
         rm -fR _rels
         rm -fR data
+        rm -fR package
+
+        # Mark AOT generation binaries executable
+        chmod +x ./artifacts/bin/mono/browser.wasm.Release/cross/*
+
+        # Move cross compiler to appropriate location
+        mv ./artifacts/bin/mono/browser.wasm.Release/cross runtimes/browser-wasm/native
 
     - name: Zip Archive
       run: |
